opam-version: "2.0"
version: "0.2.0"
maintainer: "Ramil Farkhshatov <ramil.fh@ya.ru>"
authors: ["Ramil Farkhshatov"]
license: "LGPLv3 with OpenSSL linking exception"
build: ["dune" "build" "-j" jobs "-p" name]
synopsis: "Simple websocket client"
depends: ["lwt"
          "lwt_ppx"
          "mirage-crypto" {>= "1.1.0"}
          "base64"
          "digestif"
          "uri"
          "tls" {>= "1.0.0"}
          "tls-lwt" {>= "1.0.0"}
          ]
